IPP/projects/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_type1.src
.IPPcode19
MOVE int@531 GF@tahi
